# MTN

./: CMakeLists.txt  TODO.txt
src/: buildConfig.h  globals.h  main.cpp  memory.h  utils.h  windowShit.cpp  windowShit.h
src/game/: Entity.h
src/rendering/: APIDefs.h  GL.cpp  GL.h  RenderStructs.h
src/rendering/GL/: Mesh.h
